feat: add runtime support

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,24 @@
 [versions]
-kotlin = "2.1.0"
+kotlin = "2.1.20"
+android = "8.6.1"
 serialization = "1.8.0"
 protobuf = "4.30.1"
 poet = "2.1.0"
+ktor = "3.1.1"
 kermit = "2.0.5"
 detekt = "1.23.8"
 
 [libraries]
 kotlinx-serialization-protobuf = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-protobuf", version.ref = "serialization" }
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serialization" }
 protobuf-kotlin = { group = "com.google.protobuf", name = "protobuf-kotlin", version.ref = "protobuf" }
 poet-kotlin = { group = "com.squareup", name = "kotlinpoet", version.ref = "poet" }
+ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
 kermit = { group = "co.touchlab", name = "kermit", version.ref = "kermit" }
 detekt-formatting = { group = "io.gitlab.arturbosch.detekt", name = "detekt-formatting", version.ref = "detekt" }
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+android-library = { id = "com.android.library", version.ref = "android" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
